[Fix bug 1162450] Change leaflet z-index to put it below modals

--- a/remo/base/static/base/css/app-fd4.less
+++ b/remo/base/static/base/css/app-fd4.less
@@ -2940,6 +2940,12 @@ meter::-o-meter-suboptimum-value {
 .leaflet-control-mapbox-geocoder-form input {
     margin-top: 0px;
 }
+
+.leaflet-top,
+.leaflet-bottom {
+    z-index: 10 !important;
+}
+
 /* -----------------------------------------
    Dashboard Styles
 ----------------------------------------- */
